--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Content Manager</title>
+  <title>Netlify CMS</title>
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 </head>
 
@@ -13,5 +13,7 @@
     CMS.init();
   </script>
 </body>
+
+</html>
 
 </html>
